--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,64 @@
+* {
+  color: white;
+  font-family: "Roboto";
+  margin: 0;
+  padding: 0;
+}
+a {
+  color: white;
+  font-size: 15px;
+  background-color: white;
+}
 .App {
+  font-family: sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  background-color: white;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  background-color: #531b1b;
+  overflow: auto;
+  margin: 20px;
+  padding: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.main {
+  margin: 20px;
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about {
+  background-color: #f7e702;
+  display: flex;
+}
+
+.picture {
+  flex: 1 1 50%;
+}
+
+.picture-img {
+  width: 100%;
+}
+
+.about-text {
+  flex: 1 1 50%;
+}
+
+.contact {
+  background-color: purple;
+  text-align: center;
+}
+
+.navigation {
+  float: right;
+}
+
+button {
+  background-color: #ed1b1b;
 }
